bug-fix: side menu required adjusting to the top on smaller displays

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,7 +10,7 @@
 .container {
   flex-grow: 1;
   padding-top: 10px;
-  margin-left: 64px; /* Adjust for the sidebar width */
+  margin-left: 45px;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
@@ -18,7 +18,7 @@
 
 .innerContainer {
   width: 100%;
-  max-width: 670px;
+  max-width: 768px;
 }
 
 .bodyContainer {
@@ -29,14 +29,14 @@
 
 .settingButtonPanel {
   padding: 0px 12px;
-  max-width: 670px;
+  max-width: 768px;
   margin: auto;
 }
 
 .settingHeaderContainer {
   display: flex;
   flex-direction: row;
-  max-width: 670px;
+  max-width: 768px;
   margin: 15px 10px;
   justify-content: space-between;
   height: 35px;
@@ -72,4 +72,57 @@
   height: 25px;
   width: 25px;
   color: #fff;
+}
+
+@media (max-width: 768px) {
+  .App {
+    flex-direction: column;
+  }
+
+  .container {
+    margin-left: 0;
+    padding-top: 0;
+    width: 100%;
+  }
+
+  .sideMenu {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: auto;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .innerContainer {
+    max-width: 100%;
+  }
+
+  .settingHeaderContainer {
+    margin: 15px 5px;
+    height: 100%;
+  }
+
+  .bodyContainer {
+    padding: 0px 0em;
+  }
+
+  
+  .icon {
+    height: 2.5rem;
+    width: 2.5rem;
+  }
+  
+}
+
+@media (max-width: 480px) {
+  .settingHeaderContainer {
+    margin: 15px 10px;
+    height: 100%;
+  }
+
+  .icon {
+    height: 2.5rem;
+    width: 2.5rem;
+  }
 }
