--- a/src/components/Sidebar/components/SideMenu/SideMenu.module.css
+++ b/src/components/Sidebar/components/SideMenu/SideMenu.module.css
@@ -2,16 +2,21 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: 20;
   display: flex;
   height: 100vh;
-  /* width: 64px; */
   width: 50px;
   flex-direction: column;
   align-items: center;
   overflow: hidden;
   background-color: var(--panel-background);
   color: rgba(156, 163, 175, 1);
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(0);
+}
+
+.sideMenu.open {
+  transform: translateX(20rem);
 }
 
 [data-theme="high-contrast"] .sideMenu {
@@ -31,17 +36,49 @@
   transition: all 0.3s ease-in-out;
   cursor: pointer;
   border: none;
-  &:hover { 
-    background-color: var(--panel-background-hover);
-  }
-
-  &:focus {
-    outline: 2px solid var(--text-color);
 }
+
+.topIcon:hover {
+  background-color: var(--panel-background-hover);
+}
+
+.topIcon:focus {
+  outline: 2px solid var(--text-color);
 }
 
 .topIconSvg {
   height: 32px;
   width: 32px;
   color: var(--panel-text);
+}
+
+@media (max-width: 768px) {
+  .sideMenu {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content:flex-start;
+    border-bottom-width: 1px;
+    width: 100%;
+    height: auto;
+    flex-direction: row;
+  }
+
+  .sideMenu.open {
+    transform: translateY(0);
+  }
+
+  .topIcon {
+    margin: 0.025rem;
+    padding: 0.025rem;
+    height: 3.5rem;
+    width: 3.5rem;
+  }
+
+  .topIconSvg {
+    height: 2rem;
+    width: 2rem;
+  }
 }
