--- a/src/components/TaskPanel/styles/TaskPanel.module.css
+++ b/src/components/TaskPanel/styles/TaskPanel.module.css
@@ -1,6 +1,6 @@
 .container {
   padding: 20px;
-  max-width: 670px;
+  max-width: 768px;
   margin: auto;
 }
 
@@ -104,7 +104,7 @@ ul {
 }
 
 .taskPanel {
-  max-width: 670px;
+  max-width: 768px;
   display: flex;
   flex-direction: column;
   width: 100%;
